include/slib/fileopt.h

/*
 *  fileopt.h - File operations of the slib
 *
 *  Copyright (C) 2016 - 2018 Zhang Maiyun
 *
 * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 *
 *  This file is part of the slib.
 *  The slib is free software; you can redistribute it and/or modify
 *  it under the terms of the GNU Lesser General Public License as published by
 *  the Free Software Foundation; either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Lesser General Public License for more details.
 *
 *  You should have received a copy of the GNU Lesser General Public License
 *  along with this program; if not, write to the Free Software
 *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 *
 * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */

#ifndef SLIB_FILEOPT_H
#define SLIB_FILEOPT_H 1

#include "slib/general.h"

_BEGIN_EXTERN_C

OPT long fsize(FILE *stream);

OPT int iofile(FILE *in, FILE *out);

OPT void splitpathS(const char *path, char *drive, char *dir, char *fname,
                    char *ext);

OPT long *slib_count_fl(FILE *file, long *pcount);

OPT long slib_fbsearch(char *key, FILE *fp, long *insertloc,
                       int (*compar)(char *s1, char *s2));

OPT void slib_fqsort(FILE *fp, int (*compar)(char *s1, char *s2));

#if !PLAT
OPT int getch(void);
OPT int kbhit(void);
#endif

_END_EXTERN_C
#endif